- Removed programmatic UPerf Tests - Added AverageSummary - UPerf now uses AverageSummary to get results from invokers / members - RpcStats: replaced AtomicInteger with LongAdder - RequestCorrelator: stats are disabled by default (use enable-rpcstats or rpcs-enable-details to enable) - Average/AverageMinMax now use a simple array of doubles with a given capacity and write new samples to it (https://issues.redhat.com/browse/JGRP-2857) - LazyThreadFactory does not call Thread.getState() anymore